# CarPicSorterAI-deploy

./: .env  .gitcache  .replit  README.md  Requirements.txt  ai_model.py  auth.py  car_icon.txt  check_prereqs.sh  copy_files.sh  custom_model.py  database.py  generate_icon.py  image_utils.py  launch_app.applescript  main.py  packages.txt  pyproject.toml  replit.nix  replit_zip_error_log.txt  run_app.sh  setup_config.py  test_cpu_model.py
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.streamlit/: config.toml
.upm/: store.json
