[project]
name = "repl-nix-carpicsorterai-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.7.0,<1.0.0",
    "bcrypt>=4.0.1,<5.0.0",
    "flask-login>=0.6.3",
    "numpy>=1.24.3,<2.0.0",
    "pandas>=1.5.3,<2.0.0",
    "pillow>=9.5.0,<10.0.0",
    "plotly>=5.14.1,<6.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "python-dotenv>=0.19.0,<1.0.0",
    "streamlit>=1.22.0,<2.0.0",
    "tensorflow>=1.0.1",
]
