[tool.poetry]
name = "car-image-sorter"
version = "0.1.0"
description = "A Streamlit app for sorting car images using AI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
Pillow = "^10.4.0"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.2.0"
numpy = "^1.26.4"
anthropic = "^0.37.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
